style.css
/*Basic Style */
* {
    box-sizing: border-box;
}
body {
  background-color: #f8f8f8;
  color: #333;
  font-family: Lato, sans-serif;
}
.hero {
  width: 500px;
  margin: 0 auto;
  display: block;
  text-align: right;
}
.hero img {
  width: 100%;
}
.hero .more-info {
  font-family: fantasy, cursive;
}

@media (max-width:768px) {
  .hero { text-align: center;
}
}
.centered-main-page-element {
  display: block;
  width: 500px;
  margin: 0 auto 0;
}
.task {
  width: 56%;
  display: inline-block;
  flex-grow: 1
}
.task-wrapper {
  display: flex;
}
ul {
  margin:0;
  padding: 0px;
}
li, h3 {
  list-style:none;
}
input,button{
  outline:none;
}
button {
  background: none;
  border: 0px;
  color: #888;
  font-size: 15px;
  width: 60px;
  font-family: Lato, sans-serif;
  cursor: pointer;
}
button:hover {
  color: #3a3a3a;
}
/* Heading */
h3,
label[for="new-task"] {
  color: #333;
  font-weight: 700;
  font-size: 15px;
  border-bottom: 2px solid #333;
  padding: 30px 0 10px;
  margin: 0;
  text-transform: uppercase;
}
input[type="text"] {
  margin: 0;
  font-size: 18px;
  line-height: 18px;
  height: 21px;
  padding: 0 9px;
  border: 1px solid #dDd;
  background: #FFF;
  border-radius: 6px;
  font-family: Lato, sans-serif;
  color: #888;
}
input[type="text"]:focus {
  color: #333;
}

/* New Task */
label[for="new-task"] {
  display: block;
  margin: 0 0 20px;
}
input#new-task {
  width: 318px;
}
p > button:hover {
  color: #0fc57c;
}

/* Task list */
li {
  overflow: hidden;
  padding: 20px 0;
  border-bottom: 1px solid #eee;

  display: flex;
  justify-content: space-between;
  align-items: center;
}
li > * {
  vertical-align: middle;
}

li > input[type="checkbox"] {
  margin: 0 10px;
}
li > label {
  padding-left: 10px;
  box-sizing: border-box;
  font-size: 18px;
  width: 226px;
}
li >    input[type="text"] {
  width: 226px
}
li > button.delete:hover {
  color: #cf2323;
}
button.delete img {
  height: 2em;
  transform: rotateZ(45deg);
  transition: transform 200ms ease-in;
}
button.delete img:hover {
  transform: rotateZ(0);
}

/* Completed */
ul#completed-tasks label {
  text-decoration: line-through
color: #888;
}

/* Edit Task */
ul li input[type=text] {
  display:none
}

ul li.edit-mode input[type=text] {
  display:inline-block;
  width:224px
}

ul li.edit-mode label {
  display:none;
}

